prevent non wrapping char sequences from going off page and causing scroll

--- a/index/static/style.css
+++ b/index/static/style.css
@@ -24,6 +24,7 @@ body{
 }
 
 .quote{
+	overflow: hidden;
 	margin-left: auto;
 	margin-right: auto;
 	padding: .25em;
